--- a/src/app/catalog/anti-fire/swinging/swinging.component.html
+++ b/src/app/catalog/anti-fire/swinging/swinging.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Распашные противопожарные ворота с классом огнестойкости EI90, EI120</h2>
+    <h2 class="product__title title__after">Распашные противопожарные ворота DoorHan с классом огнестойкости EI90, EI120</h2>
     <p class="product__description">
       Установка противопожарных распашных ворот является одним из эффективных методов локализации очага возгорания. Противопожарные
       ворота сдерживают распространение огня и продуктов горения, тем самым увеличивают время, необходимое для принятия жизненно
