--- a/src/app/catalog/ramp-and-table/two-pair-scissors/two-pair-scissors.component.html
+++ b/src/app/catalog/ramp-and-table/two-pair-scissors/two-pair-scissors.component.html
@@ -3,7 +3,7 @@
   <div class="product">
     <h2 class="product__title title__after">Стол подъемный с двумя парами ножниц серии 2LT</h2>
     <p class="product__description">
-      Современные гидравлические подъемные столы применяются в различных сферах деятельности как промышленной, так и бытовой, обеспечивая
+      Современные гидравлические подъемные столы DoorHan применяются в различных сферах деятельности как промышленной, так и бытовой, обеспечивая
       подъем и опускание грузов на различные уровни. Использование подъемных столов позволяет выполнять вертикальные перегрузочные
       операции максимально быстро. Подъемные столы надежны в эксплуатации и просты в техническом обслуживании. Подъемный
       стол представляет собой фиксированное подъемное устройство, предназначенное для перемещения предметов при организации
