--- a/src/app/catalog/sections/industrial/industrial.component.html
+++ b/src/app/catalog/sections/industrial/industrial.component.html
@@ -11,7 +11,7 @@
       </div>
     </div>
     <p class="product__description">
-      Промышленные секционные ворота серии ISD01 устанавливаются в проемы производственных зданий, складских помещений, цехов,
+      Промышленные секционные ворота DoorHan серии ISD01 устанавливаются в проемы производственных зданий, складских помещений, цехов,
       терминалов и прочих промышленных объектов, где они должны отвечать гораздо более жестким требованиям нежели гаражные
       секционные ворота. Так как промышленные ворота эксплуатируются с высокой интенсивностью, для обеспечения долгосрочной
       работы без сбоев, они обладают повышенными прочностными характеристиками за счет усиленной конструкции. Используемая
