--- a/src/app/catalog/sections/panorama/panorama.component.html
+++ b/src/app/catalog/sections/panorama/panorama.component.html
@@ -3,7 +3,7 @@
   <div class="product">
     <h2 class="product__title title__after">Панорамные</h2>
     <p class="product__description">
-      Панорамные секционные ворота серии ISD02 полностью или частично состоят из панорамных панелей, благодаря чему являются идеальным
+      Панорамные секционные ворота DoorHan серии ISD02 полностью или частично состоят из панорамных панелей, благодаря чему являются идеальным
       вариантом для установки в зданиях с остекленными фасадами, например, в автомобильных салонах. Они не уступают по прочности
       промышленным секционным воротам серии ISD01 благодаря тому, что панорамные панели изготавливаются из прочных алюминиевых
       профилей. Для повышения энергосберегающих и термоизоляционных свойств ворот, компания DoorHan предлагает комбинировать
