--- a/src/app/catalog/sections/standart/standart.component.html
+++ b/src/app/catalog/sections/standart/standart.component.html
@@ -3,7 +3,7 @@
   <div class="product">
     <h2 class="product__title title__after">С пружинами растяжения стандартных размеров</h2>
     <p class="product__description">
-      Секционные ворота стандартных размеров обладают конструктивными особенностями серии RSD01. Ворота изготавливаются в 10 комплектах,
+      Секционные ворота DoorHan стандартных размеров обладают конструктивными особенностями серии RSD01. Ворота изготавливаются в 10 комплектах,
       которые всегда есть в наличии на склае производителя. Балансировочный механизм полотна рассчитан на 25 000 рабочих
       циклов. Комплекты предназначены для самостоятельной установки, просты и удобны как в монтаже, так и в эксплуатации.
     </p>
