--- a/src/app/catalog/sections/stretching/stretching.component.html
+++ b/src/app/catalog/sections/stretching/stretching.component.html
@@ -11,8 +11,8 @@
       </div>
     </div>
     <p class="product__description">
-      Гаражные секционные ворота с пружинами растяжения предназначены для перекрытия въездных проемов небольших размеров
-      <br> (шириной от 2 000 до 3 100 мм, высотой от 1 800 до 3 000 мм) в гаражных и технических помещениях. Конструкция на базе
+      Гаражные секционные ворота DoorHan с пружинами растяжения предназначены для перекрытия въездных проемов небольших размеров
+      (шириной от 2 000 до 3 100 мм, высотой от 1 800 до 3 000 мм) в гаражных и технических помещениях. Конструкция на базе
       низкого типа подъема может быть установлена в помещениях, имеющих минимальные пристенки и притолоку (от 100 мм). Ворота
       идеальны для использования в индивидуальном строительстве. Имеют широкую гамму цветовых и дизайнерских решений. Конструкция
       ворот термоэффективна (надежно герметизирует проем), прочна, проста в монтаже и обладает длительным сроком службы.</p>
