--- a/src/app/catalog/sections/torsional/torsional.component.html
+++ b/src/app/catalog/sections/torsional/torsional.component.html
@@ -11,7 +11,7 @@
       </div>
     </div>
     <p class="product__description">
-      Гаражные ворота серии RSD02 рассчитаны на установку в проемы как небольших, так и средних размеров. Они могут быть установлены
+      Гаражные ворота DoorHan серии RSD02 рассчитаны на установку в проемы как небольших, так и средних размеров. Они могут быть установлены
       в помещения с притолокой от 150 мм и боковыми расстояниями (от края проема до стены) от 120 мм. Специально разработанная
       конструкция и многообразие типов подъема позволяют установить данную серию ворот в помещения с различными архитектурными
       особенностями. Размеры проема: ширина — от 2 000 до 6 000 мм; высота — от 1 800 до 3 100 мм. Гаражные ворота могут
