--- a/src/app/catalog/speed-roll/film-swinging/film-swinging.component.html
+++ b/src/app/catalog/speed-roll/film-swinging/film-swinging.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Пленочные маятниковые двери серии SSD</h2>
+    <h2 class="product__title title__after">Пленочные маятниковые двери DoorHan серии SSD</h2>
     <p class="product__description">
-      Распашные пленочные ворота ПВХ предназначены для изоляции и сохранения микроклимата помещений на объектах промышленного,
+      Распашные пленочные ворота ПВХ DoorHan предназначены для изоляции и сохранения микроклимата помещений на объектах промышленного,
       складского, торгового и другого назначения. Конструкция ворот позволяет им возвращаться в исходное положение и автоматически
       смыкаться сразу после прохода сквозь них. Ворота отличаются бесшумной работой, легкостью функционирования и быстрой
       очисткой.</p>
