--- a/src/app/catalog/speed-roll/film-veils/film-veils.component.html
+++ b/src/app/catalog/speed-roll/film-veils/film-veils.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Пленочные полосовые завесы серии FC</h2>
+    <h2 class="product__title title__after">Пленочные полосовые завесы DoorHan серии FC</h2>
     <p class="product__description">
-      Полосовые пленочные завесы предназначены для изоляции и сохранения микроклимата помещений на объектах промышленного, складского,
+      Полосовые пленочные завесы DoorHan предназначены для изоляции и сохранения микроклимата помещений на объектах промышленного, складского,
       торгового и другого назначения. Конструкция полосовых пленочных завес позволяет им возвращаться в исходное положение
       и автоматически смыкаться сразу после прохода сквозь них.</p>
     <img class="product__img" src="../../../../assets/img/catalog/speed-roll/posters/poster-film-veils.jpg" alt="FC">
