--- a/src/app/catalog/speed-roll/inside/inside.component.html
+++ b/src/app/catalog/speed-roll/inside/inside.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Скоростные рулонные ворота для внутреннего использования серии SPEEDROLL SDI</h2>
+    <h2 class="product__title title__after">Скоростные рулонные ворота DoorHan для внутреннего использования серии SPEEDROLL SDI</h2>
     <p class="product__description">
-      Скоростные рулонные ворота предназначены для изоляции и сохранения микроклимата помещений на объектах промышленного, складского,
+      Скоростные рулонные ворота DoorHan предназначены для изоляции и сохранения микроклимата помещений на объектах промышленного, складского,
       торгового и дpугого назначения.</p>
     <img class="product__img" src="../../../../assets/img/catalog/speed-roll/posters/poster-inside.jpg" alt="SPEEDROLL SDI">
   </div>
