--- a/src/app/catalog/street/recoiling/recoiling.component.html
+++ b/src/app/catalog/street/recoiling/recoiling.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Откатные уличные ворота в алюминиевой раме с заполнением сэндвич панелями</h2>
+    <h2 class="product__title title__after">Откатные уличные ворота DoorHan в алюминиевой раме с заполнением сэндвич панелями</h2>
     <p class="product__description">
-      Откатные ворота предназначены для установки в уличные ограждающие конструкции с целью ограничения доступа на территорию и
+      Откатные ворота DoorHan предназначены для установки в уличные ограждающие конструкции с целью ограничения доступа на территорию и
       контроля движения автотранспорта. Полотно откатных ворот изготавливается из алюминиевых профилей или сэндвич-панелей,
       окантованных алюминиевым профилем. Многообразие размеров, роликовых систем, направляющих и электроприводов откатных
       ворот позволяет подобрать подходящий вариант для любых объектов. Большой выбор дизайнерских решений уличных ворот позволяет
