--- a/src/app/catalog/street/swinging/swinging.component.html
+++ b/src/app/catalog/street/swinging/swinging.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Распашные уличные ворота в алюминиевой раме с заполнением сэндвич панелями</h2>
+    <h2 class="product__title title__after">Распашные уличные ворота DoorHan в алюминиевой раме с заполнением сэндвич панелями</h2>
     <p class="product__description">
-      Распашные ворота имеют две створки, которые открываются внутрь или наружу огороженной территории. Они являются классическим
+      Распашные ворота DoorHan имеют две створки, которые открываются внутрь или наружу огороженной территории. Они являются классическим
       решением и по-прежнему остаются популярными. Распашные ворота подходят для установки в случаях, когда невозможно установить
       сдвижную конструкцию ворот.</p>
     <p>
