--- a/src/app/catalog/street/wickets/wickets.component.html
+++ b/src/app/catalog/street/wickets/wickets.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Калитка в алюминиевой раме с заполнением сэндвич панелями</h2>
+    <h2 class="product__title title__after">Калитка в алюминиевой раме DoorHan с заполнением сэндвич панелями</h2>
     <p class="product__description">
-      Калитка в алюминиевой раме с заполнением сэндвич-панелями обеспечит дополнительный вход на территорию. Идеальна для использования
+      Калитка в алюминиевой раме DoorHan с заполнением сэндвич-панелями обеспечит дополнительный вход на территорию. Идеальна для использования
       в индивидуальном и эксклюзивном строительстве. Обладает эстетичным внешним видом и широкими возможностями дизайнерского
       исполнения (более 100 вариантов), надежной конструкцией и длительным сроком работы.</p>
     <img class="product__img" src="../../../../assets/img/catalog/street/poster/poster-wicket.jpg" alt="Калитка">
