--- a/src/app/catalog/transshipment/bridge-folding-sliding/bridge-folding-sliding.component.html
+++ b/src/app/catalog/transshipment/bridge-folding-sliding/bridge-folding-sliding.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Мост откидной стационарный, скользящий серии FT</h2>
+    <h2 class="product__title title__after">Мост откидной стационарный DoorHan, скользящий серии FT</h2>
     <p class="product__description">
-      Мосты откидные стационарные и скользящие служат для организации погрузочно-разгрузочных мест, устанавливаются на открытую
+      Мосты DoorHan откидные стационарные и скользящие служат для организации погрузочно-разгрузочных мест, устанавливаются на открытую
       рампу, компенсируя, в зависимости от модели, разницу в высоте (до 360 мм) между пандусом и кузовом автомобиля. Мосты
       предназначены для взаимодействия с автомобилями, имеющими примерно одинаковую высоту, которая отличается от высоты
       пандуса.
