--- a/src/app/catalog/transshipment/bridge-portable/bridge-portable.component.html
+++ b/src/app/catalog/transshipment/bridge-portable/bridge-portable.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Мост переносной</h2>
+    <h2 class="product__title title__after">Мост переносной DoorHan</h2>
     <p class="product__description">
-      Переносные мосты серии МТ используются для организации погрузочно-разгрузочных работ в случае, когда поток продукции не слишком
+      Переносные мосты DoorHan серии МТ используются для организации погрузочно-разгрузочных работ в случае, когда поток продукции не слишком
       велик, и нет необходимости устанавливать стационарный док. Мосты предназначены для использования с автомобилями, имеющими
       примерно одинаковую высоту, которая должна быть больше уровня рампы. Переносные мосты устанавливаются между рампой
       и кузовом автомобиля, компенсируя разницу в высоте до 240 мм. Перемещение моста к необходимому месту осуществляется
