--- a/src/app/catalog/transshipment/farm-remote/farm-remote.component.html
+++ b/src/app/catalog/transshipment/farm-remote/farm-remote.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Ферма выносная серии FEH, FET</h2>
+    <h2 class="product__title title__after">Ферма выносная DoorHan серии FEH, FET</h2>
     <p class="product__description">
-      Ферма выносная предназначена для установки уравнительной платформы. Благодаря тому, что фермы вынесены за пределы здания,
+      Ферма выносная DoorHan предназначена для установки уравнительной платформы. Благодаря тому, что фермы вынесены за пределы здания,
       их использование позволяет экономить пространство складских помещений. Они незаменимы в местах, где необходимо максимально
       задействовать складские площади, а также там, где невозможно осуществить парковку грузовых автомобилей перпендикулярно
       зданию.
