--- a/src/app/catalog/transshipment/hermetic-cushion/hermetic-cushion.component.html
+++ b/src/app/catalog/transshipment/hermetic-cushion/hermetic-cushion.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Герметизатор подушечный серии DSHINP</h2>
+    <h2 class="product__title title__after">Герметизатор подушечный DoorHan серии DSHINP</h2>
     <p class="product__description">
-      Герметизатор подушечного типа серии DSHINP является самым бюджетным вариантом для использования с парком небольших автомобилей
+      Герметизатор подушечного типа DoorHan серии DSHINP является самым бюджетным вариантом для использования с парком небольших автомобилей
       примерно одинакового размера, имеющих прочный кузов. При проведении погрузочно-разгрузочных работ автомобиль подъезжает
       к герметизатору с предварительно открытыми дверями, вдавливая подушки примерно на 50 мм, благодаря чему образуется
       уплотнение с трех сторон кузова автомобиля. Материал ПВХ, из которого изготовлены чехлы подушек обладает достаточной
