--- a/src/app/catalog/transshipment/hermetic-folding-frame/hermetic-folding-frame.component.html
+++ b/src/app/catalog/transshipment/hermetic-folding-frame/hermetic-folding-frame.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Герметизатор со складной рамой серии DSHRT</h2>
+    <h2 class="product__title title__after">Герметизатор DoorHan со складной рамой серии DSHRT</h2>
     <p class="product__description">
-      Герметизаторы проема со складной рамой серий DSHRT и DSHRTM являются классическим вариантом для установки в местах со средней
+      Герметизаторы проема DoorHan со складной рамой серий DSHRT и DSHRTM являются классическим вариантом для установки в местах со средней
       интенсивностью грузопотока. Материал ПВХ, из которого изготовлены фронтальные листы, обладает достаточной эластичностью,
       износостойкостью и имеет высокое сопротивление на разрыв. При проведении погрузочно-разгрузочных работ кузов автомобиля
       частично въезжает внутрь герметизатора. Верхний и боковые вертикальные листы облегают кузов, обеспечивая герметизацию
