--- a/src/app/catalog/transshipment/hermetic-rigid-frame/hermetic-rigid-frame.component.html
+++ b/src/app/catalog/transshipment/hermetic-rigid-frame/hermetic-rigid-frame.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Герметизатор с жесткой рамой серии DSHRD</h2>
+    <h2 class="product__title title__after">Герметизатор DoorHan с жесткой рамой серии DSHRD</h2>
     <p class="product__description">
-      Герметизаторы проема с жесткой рамой серии DSHRD функционально рассчитаны на большой грузопоток. Рама изготавливается из
+      Герметизаторы проема DoorHan с жесткой рамой серии DSHRD функционально рассчитаны на большой грузопоток. Рама изготавливается из
       сэндвич-панелей, окантованных алюминиевым профилем. Фронтальная прижимная планка выполнена из алюминиевого профиля,
       окрашенного порошковым способом. Материал фронтальных листов достаточно эластичный, обладает высокой износостойкостью
       и сопротивлением на разрыв. При проведении погрузочно-разгрузочных работ кузов автомобиля частично въезжает внутрь
