--- a/src/app/catalog/transshipment/platform-console-type/platform-console-type.component.html
+++ b/src/app/catalog/transshipment/platform-console-type/platform-console-type.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Платформа уравнительная консольного типа с поворотной аппарелью серии</h2>
+    <h2 class="product__title title__after">Платформа уравнительная DoorHan консольного типа с поворотной аппарелью серии</h2>
     <p class="product__description">
-      Электрогидравлические уравнительные платформы с поворотной аппарелью консольного типа серии DLHHC являются типовыми устройствами
+      Электрогидравлические уравнительные платформы DoorHan с поворотной аппарелью консольного типа серии DLHHC являются типовыми устройствами
       для оборудования перегрузочных мест. При активизации платформа поднимается, и аппарель, поворачиваясь, открывается.
       Платформа опускается до тех пор, пока не достигнет пола кузова автомобиля. После окончания погрузочно-разгрузочных
       работ платформа поднимается, аппарель опускается, и платформа возвращается в исходное положение. Платформа имеет универсальный
