--- a/src/app/catalog/transshipment/platform-mechanical-minidock/platform-mechanical-minidock.component.html
+++ b/src/app/catalog/transshipment/platform-mechanical-minidock/platform-mechanical-minidock.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Платформа уравнительная механическая "Минидок" серии MDLM</h2>
+    <h2 class="product__title title__after">Платформа уравнительная DoorHan механическая "Минидок" серии MDLM</h2>
     <p class="product__description">
-      Платформа уравнительная механическая «Минидок» серии MDLM разработана как удобное и экономичное решение для работы с примерно
+      Платформа уравнительная механическая DoorHan «Минидок» серии MDLM разработана как удобное и экономичное решение для работы с примерно
       одинаковыми по высоте автомобилями. «Минидок» не требует подведения электропитания, может использоваться в случаях,
       когда нет возможности установить электрогидравлическую платформу. Механическая платформа управляется вручную при помощи
       рычага, силой одного человека. При подъеме аппарель, поворачиваясь, открывается. Затем платформа опускается до тех
