--- a/src/app/catalog/transshipment/platform-mechanical/platform-mechanical.component.html
+++ b/src/app/catalog/transshipment/platform-mechanical/platform-mechanical.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Платформа уравнительная смеханическая серии MODL</h2>
+    <h2 class="product__title title__after">Платформа уравнительная DoorHan смеханическая серии MODL</h2>
     <p class="product__description">
-      Механическая уравнительная платформа серии MODL не требует подведения электропитания, может использоваться в случаях, когда
+      Механическая уравнительная платформа DoorHan серии MODL не требует подведения электропитания, может использоваться в случаях, когда
       отсутствует электричество и нет возможности установить электрогидравлическую платформу. Механическая платформа поднимается
       вручную, силой двух человек, при этом аппарель, поворачиваясь, открывается автоматически. Платформа опускается до тех
       пор, пока не достигнет кузова автомобиля. После окончания работ платформа приподнимается, аппарель опускается, и платформа
