--- a/src/app/catalog/transshipment/platform-telescopic-lip/platform-telescopic-lip.component.html
+++ b/src/app/catalog/transshipment/platform-telescopic-lip/platform-telescopic-lip.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Платформа уравнительная с выдвижной аппарелью серии DS</h2>
+    <h2 class="product__title title__after">Платформа уравнительная DoorHan с выдвижной аппарелью серии DS</h2>
     <p class="product__description">
-      Электрогидравлические уравнительные платформы с выдвижной аппарелью серии DS являются наиболее эффективными устройствами
+      Электрогидравлические уравнительные платформы DoorHan с выдвижной аппарелью серии DS являются наиболее эффективными устройствами
       для обеспечения доступа автопогрузчика из склада в кузов автомашины. Используются в случаях, когда необходимо максимально
       точно позиционировать аппарель в кузове, а также при боковой загрузке автомобилей. Сегменты аппарели обеспечивают возможность
       работы с автомобилями, ширина которых меньше ширины платформы. При активизации платформа поднимается, а аппарель выдвигается.
