--- a/src/app/catalog/transshipment/tambour-overload-standard/tambour-overload-standard.component.html
+++ b/src/app/catalog/transshipment/tambour-overload-standard/tambour-overload-standard.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Тамбур перегрузочный стандартной серии DHOUS</h2>
+    <h2 class="product__title title__after">Тамбур перегрузочный DoorHan стандартной серии DHOUS</h2>
     <p class="product__description">
-      Перегрузочный тамбур предназначен для установки уравнительной платформы и герметизатора. Благодаря тому, что тамбуры вынесены
+      Перегрузочный тамбур DoorHan предназначен для установки уравнительной платформы и герметизатора. Благодаря тому, что тамбуры вынесены
       за пределы здания, их использование позволяет сохранять микроклимат и экономить пространство складских помещений, а
       также защищать груз от климатических факторов. Они незаменимы в местах, где необходимо максимально задействовать складские
       площади и предъявляются повышенные требования к температурному режиму, а также там, где невозможно осуществить парковку
