--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,7 +67,7 @@
         <div class="row footer-top-wrap">
           <div class="col-md-4 footer-top-menu">
             <ul>
-              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/section" href="#" (click)="onTop()">Секцилнные ворота</a></li>
+              <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/section" href="#" (click)="onTop()">Секционные ворота</a></li>
               <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/street" href="#" (click)="onTop()">Уличные ворота</a></li>
               <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/anti-fire" href="#" (click)="onTop()">Противопожарные ворота</a></li>
               <li class="footer-top-menu-item"><a class="footer-top-menu-link" routerLink="/catalog/avtomatica" href="#" (click)="onTop()">Автоматика</a></li>
