--- a/src/app/catalog/anti-fire/recoiling/recoiling.component.html
+++ b/src/app/catalog/anti-fire/recoiling/recoiling.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Откатные противопожарные ворота с классом огнестойкости EI60, EI90</h2>
+    <h2 class="product__title title__after">Откатные противопожарные ворота DoorHan с классом огнестойкости EI60, EI90</h2>
     <p class="product__description">
       Установка противопожарных сдвижных ворот является одним из эффективных методов локализации очага возгорания. Противопожарные
       ворота удерживают распространение огня и продуктов горения, тем самым увеличивают время, необходимое для принятия жизненно
