--- a/src/app/catalog/speed-roll/outside/outside.component.html
+++ b/src/app/catalog/speed-roll/outside/outside.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Скоростные рулонные ворота для наружного использования серии SPEEDROLL SDO</h2>
+    <h2 class="product__title title__after">Скоростные рулонные ворота DoorHan для наружного использования серии SPEEDROLL SDO</h2>
     <p class="product__description">
-      Скоростные рулонные ворота предназначены для изоляции и сохранения микроклимата помещений на объектах промышленного, складского,
+      Скоростные рулонные ворота DoorHan предназначены для изоляции и сохранения микроклимата помещений на объектах промышленного, складского,
       торгового и другого назначения.</p>
     <img class="product__img" src="../../../../assets/img/catalog/speed-roll/posters/poster-outside.jpg" alt="SPEEDROLL SDO">
   </div>
