--- a/src/app/catalog/transshipment/hermetic-inflatable/hermetic-inflatable.component.html
+++ b/src/app/catalog/transshipment/hermetic-inflatable/hermetic-inflatable.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <!-- Product main start -->
   <div class="product">
-    <h2 class="product__title title__after">Герметизатор надувной серии DSHINF</h2>
+    <h2 class="product__title title__after">Герметизатор надувной DoorHan серии DSHINF</h2>
     <p class="product__description">
-      Надувные герметизаторы проема серии DSHINF устанавливаются в случаях, когда особенно важно соблюдать температурный режим,
+      Надувные герметизаторы проема DoorHan серии DSHINF устанавливаются в случаях, когда особенно важно соблюдать температурный режим,
       например, на отгрузочных доках морозильных складов. При проведении работ кузов автомобиля частично въезжает внутрь
       герметизатора. Верхняя и боковые подушки надуваются, обеспечивая высокую герметичность между кузовом автомобиля и зданием.
       По завершении работ подушки сдуваются. Управление надувными герметизаторами может осуществляться с пульта уравнительной
