--- a/src/app/payment/payment.component.scss
+++ b/src/app/payment/payment.component.scss
@@ -8,6 +8,10 @@
   border-radius: 3px;
   box-shadow: inset 0px 0px 30px 0px rgba(0, 0, 0, 0.3);
   margin-bottom: 110px;
+  @media (max-width: 575px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 @media (max-width: 991px) {
