--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -13,9 +13,9 @@
     <div class="col-lg-6">
       <h3 class="payment-title">Доставка товаров по Украине</h3>
       <p class="payment-description">Отправка крупногабаритных товаров по Украине осуществляется после 100% предоплаты.</p>
-      <p class="payment-description">рупногабаритные товары отправляются компаниями «Деливери», «САТ» за наш счет.</p>
-      <p class="payment-description">елкогабаритные, компаниями «Новая почта», «Интайм», «Деливери», «САТ».</p>
-      <p class="payment-description">оставка производится на склад транспортной компании в Ваш город.</p>
+      <p class="payment-description">Крупногабаритные товары отправляются компаниями «Деливери», «САТ» за наш счет.</p>
+      <p class="payment-description">Мелкогабаритные, компаниями «Новая почта», «Интайм», «Деливери», «САТ».</p>
+      <p class="payment-description">Доставка производится на склад транспортной компании в Ваш город.</p>
     </div>
   </section>
 </div>
