add price for automatica

--- a/src/app/catalog/anti-fire/section/section.component.html
+++ b/src/app/catalog/anti-fire/section/section.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <!-- Product main start -->
 <div class="product">
-  <h2 class="product__title title__after">Секционные противопожартные ворота DoorHan с классм огнестойкости EI60</h2>
+  <h2 class="product__title title__after">Секционные противопожартные ворота DoorHan с классом огнестойкости EI60</h2>
   <p class="product__description">
     Противопожарные секционные ворота применяются в качестве защиты и удержания от распространения огня и дыма
     в смежные с источником возгорания помещения. Противопожарные ворота изготавливаются из специальных огнеустойчивых
