--- a/src/app/catalog/avtomatica/sections/shaft-50pro/shaft-50pro.component.html
+++ b/src/app/catalog/avtomatica/sections/shaft-50pro/shaft-50pro.component.html
@@ -6,7 +6,20 @@
       Электромеханический привод вального типа Shaft-50PRO с функцией плавного пуск и остановки ворот предназначен для автоматизации
       промышленных секционных ворот.
     </p>
-    <img class="product__img" src="../../../../../assets/img/catalog/avtomatica/sections/poster-shaft-50pro.jpg" alt="Привод SHAFT-50PRO">
+    <div *ngIf="price" class="row automatica-price-wrp">
+      <div class="col-md-4 price-img-wrp">
+        <img src="{{ price.img }}" alt="price-title" class="price-img">
+      </div>
+      <div class="col-md-8 price-title-wrp align-items-center">
+        <h3 class="price-title">{{price.title}}</h3>
+        <ul class="price-description">
+          <li *ngFor="let item of price.complect">{{item.title}} - <span>{{item.units}}</span></li>
+        </ul>
+        <div class="price">{{(price.price * course).toFixed()}} грн.</div>
+        <!-- <button class="prise-item-btn">заказать</button> -->
+      </div>
+    </div>
+    <!-- <img class="product__img" src="../../../../../assets/img/catalog/avtomatica/sections/poster-shaft-50pro.jpg" alt="Привод SHAFT-50PRO"> -->
   </div>
   <!-- Product main end -->
   <!-- Specification start -->
