--- a/src/app/catalog/avtomatica/swing/swing-5000pro/swing-5000pro.component.html
+++ b/src/app/catalog/avtomatica/swing/swing-5000pro/swing-5000pro.component.html
@@ -5,7 +5,20 @@
     <p class="product__description">
       Электромеханический привод SWING-5000PRO предназначен для автоматизации распашных ворот.
     </p>
-    <img class="product__img" src="../../../../../assets/img/catalog/avtomatica/swing/poster-swing-3000-5000.jpg" alt="Привод SWING-5000PRO">
+    <div *ngIf="price" class="row automatica-price-wrp">
+      <div class="col-md-4 price-img-wrp">
+        <img src="{{ price.img }}" alt="price-title" class="price-img">
+      </div>
+      <div class="col-md-8 price-title-wrp align-items-center">
+        <h3 class="price-title">{{price.title}}</h3>
+        <ul class="price-description">
+          <li *ngFor="let item of price.complect">{{item.title}} - <span>{{item.units}}</span></li>
+        </ul>
+        <div class="price">{{(price.price * course).toFixed()}} грн.</div>
+        <!-- <button class="prise-item-btn">заказать</button> -->
+      </div>
+    </div>
+    <!-- <img class="product__img" src="../../../../../assets/img/catalog/avtomatica/swing/poster-swing-3000-5000.jpg" alt="Привод SWING-5000PRO"> -->
   </div>
   <!-- Product main end -->
   <!-- Specification start -->
