--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @import url("./css/normalize.css");
 @import url("../node_modules/wowjs/css/libs/animate.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&subset=cyrillic,cyrillic-ext");
+
 html,
 body {
   width: 100%;
@@ -228,12 +229,14 @@ h1 {
   text-transform: uppercase;
   padding: 7px 15px;
   transition: all .3s;
+
   &:hover {
     color: #fff;
     background: #525151;
     outline: none;
   }
 }
+
 .design__color-ral-panel__item {
   margin-bottom: 15px;
 }
@@ -331,3 +334,46 @@ h1 {
 }
 
 /* gallery end */
+
+// automatic price start
+
+.automatica-price-wrp {
+  margin-bottom: 35px;
+  box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+
+  .price-img-wrp {
+
+    .price-img {
+      width: 100%;
+    }
+  }
+
+  .price-title-wrp {
+    .price-title {
+      font-size: 22px;
+      margin: 30px 0 20px;
+    }
+
+    .price-description {
+      margin-bottom: 20px;
+    }
+
+    .price {
+      font-size: 18px;
+      font-weight: 600;
+      color: #6cc46c;
+      margin-bottom: 20px;
+
+      li span {
+        font-weight: bold;
+      }
+    }
+  }
+
+  .prise-item-btn {
+    margin-bottom: 20px;
+  }
+}
+
+// automatic price rnd
