--- a/src/app/catalog/avtomatica/sections/se-1000pro/se-1000pro.component.html
+++ b/src/app/catalog/avtomatica/sections/se-1000pro/se-1000pro.component.html
@@ -16,7 +16,7 @@
           <li *ngFor="let item of price.complect">{{item.title}} - <span>{{item.units}}</span></li>
         </ul>
         <div class="price">{{(price.price * course).toFixed()}} грн.</div>
-        <!-- <button class="prise-item-btn">заказать</button> -->
+        <button class="prise-item-btn" (click)="showModalOrder(price.title)">заказать</button>
       </div>
     </div>
     <!-- <img class="product__img" src="../../../../../assets/img/catalog/avtomatica/sections/poster-se-800-1000.jpg" alt="Привод SECTIONAL-1000PRO"> -->
@@ -65,3 +65,4 @@
   </div>
   <!-- Acsessuar vorot end -->
 </div>
+<app-modal-from-order-se1000pro></app-modal-from-order-se1000pro>
