--- a/src/app/catalog/avtomatica/sections/se-1200/se-1200.component.html
+++ b/src/app/catalog/avtomatica/sections/se-1200/se-1200.component.html
@@ -15,7 +15,7 @@
         <li *ngFor="let item of price.complect">{{item.title}} - <span>{{item.units}}</span></li>
       </ul>
       <div class="price">{{(price.price * course).toFixed()}} грн.</div>
-      <!-- <button class="prise-item-btn">заказать</button> -->
+      <button class="prise-item-btn" (click)="showModalOrder(price.title)">заказать</button>
     </div>
   </div>
   <!-- <img class="product__img" src="assets/img/catalog/avtomatica/sections/poster-se-1200.jpg" alt="Привод SECTIONAL-1200"> -->
@@ -64,3 +64,4 @@
 </div>
 <!-- Acsessuar vorot end -->
 </div>
+<app-modal-from-order-se1200></app-modal-from-order-se1200>
